[package]
name = "smart_house_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.15.0", features = ["rt","net", "macros", "rt-multi-thread"] }
thiserror = "1.0.30"
rql = "0.5.2"
# macrodb = "0.1.1"
rand = "0.8.5"